# ImageDGD

./: .gitignore  ADVANCED_OPTIMIZER_EXAMPLES.md  CLEARML_MIGRATION.md  DECODER_ANALYSIS.md  DGD_fmnist.ipynb  Dockerfile  Makefile  OPTIMIZER_GUIDE.md  README.md  activate_rapids.sh  docker-compose.yml  install_log.txt  install_rapids.sh  pyproject.toml  requirements.txt  test_enhanced_decoder.py  test_independent_optimizers.py  test_optimizers.py  weak_gpu_model.pth
config/: config.yaml  config_detailed.yaml  config_minimal.yaml
configs/: config.yaml  config_weak_gpu.yaml
configs/model/: dgd_conv.yaml  weak_gpu.yaml
configs/optimization/: optuna_default.yaml  test.yaml
configs/training/: default.yaml  test.yaml  weak_gpu.yaml
docs/: decoder_enhancement_summary.md  decoder_hyperparameters.md
models/dgd_demo/: config.yaml  decoder.pth  gmm.pkl  metadata.pth  test_representation.pth  train_representation.pth  training_results.pth
notebooks/: activation_functions_visualization.ipynb  dgd_training_demo.ipynb  hydra_config_demo.ipynb
scripts/: cli.py  evaluate.py  implementation_complete.py  optimize.py  setup.sh  train.py  train_weak_gpu.py  verify_setup.py
src/: __init__.py
src/data/: __init__.py  dataloader.py
src/models/: __init__.py  dgd.py  representation_layer.py
src/optimization/: __init__.py  optuna_optimizer.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  device.py
src/visualization/: __init__.py  image.py  latent.py  loss.py  visualise.py
tests/: __init__.py  test_basic.py
utils/: __init__.py  dgd.py  gmm.py  pca.py  plot.py  representation_layer.py  visualise.py
